--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,8 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_index"
+        android:icon="@drawable/ic_home"
         android:title="首页" />
     <item
         android:id="@+id/menu_user_index"
+        android:icon="@drawable/ic_mine"
         android:title="个人中心" />
+
 </menu>
