--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -22,7 +22,7 @@
 
 
         <ImageView
-            android:id="@+id/img1"
+            android:id="@+id/img_videoPicture"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,19 +33,19 @@
         <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
-            app:layout_constraintBottom_toBottomOf="@id/img1"
+            app:layout_constraintBottom_toBottomOf="@id/img_videoPicture"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/img2"
+            android:id="@+id/img2_png"
             android:src="@drawable/ic_play"
             android:layout_marginLeft="6dp"
             ></ImageView>
         <TextView
-            android:id="@+id/text1"
+            android:id="@+id/text_numberOfPlayer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/img2"
-            app:layout_constraintLeft_toRightOf="@id/img2"
-            app:layout_constraintTop_toTopOf="@id/img2"
+            app:layout_constraintBottom_toBottomOf="@id/img2_png"
+            app:layout_constraintLeft_toRightOf="@id/img2_png"
+            app:layout_constraintTop_toTopOf="@id/img2_png"
             android:layout_marginLeft="2dp"
             android:text="asdasdasd"
             android:textSize="8sp"
@@ -55,14 +55,14 @@
             android:id="@+id/img3"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            app:layout_constraintBottom_toBottomOf="@id/img1"
-            app:layout_constraintLeft_toRightOf="@id/text1"
+            app:layout_constraintBottom_toBottomOf="@id/img_videoPicture"
+            app:layout_constraintLeft_toRightOf="@id/text_numberOfPlayer"
             android:layout_marginLeft="15dp"
             android:src="@drawable/ic_love_black"
             ></ImageView>
         >
         <TextView
-            android:id="@+id/text2"
+            android:id="@+id/text2_numberOfLove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/img3"
@@ -73,11 +73,11 @@
             android:layout_marginLeft="2dp"
             ></TextView>
         <TextView
-            android:id="@+id/text3"
+            android:id="@+id/text_introduceOfVideo"
             android:layout_marginTop="3dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/img1"
+            app:layout_constraintTop_toBottomOf="@+id/img_videoPicture"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="6dp"
@@ -87,16 +87,15 @@
             >
         </TextView>
         <TextView
-            android:id="@+id/text4"
+            android:id="@+id/text_videoClass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="视频分类"
-            app:layout_constraintTop_toBottomOf="@+id/text3"
+            app:layout_constraintTop_toBottomOf="@+id/text_introduceOfVideo"
             android:textSize="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
-            android:shadowColor=""
             ></TextView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
