--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/img_userHeadPic"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="10dp"
@@ -27,31 +27,31 @@
             ></ImageView>
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/text_UserId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="id"
-            app:layout_constraintStart_toEndOf="@+id/image"
-            app:layout_constraintTop_toTopOf="@+id/image" />
+            app:layout_constraintStart_toEndOf="@+id/img_userHeadPic"
+            app:layout_constraintTop_toTopOf="@+id/img_userHeadPic" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/text_userBbi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="B币"
-            app:layout_constraintBottom_toBottomOf="@+id/image"
-            app:layout_constraintStart_toEndOf="@+id/image" />
+            app:layout_constraintBottom_toBottomOf="@+id/img_userHeadPic"
+            app:layout_constraintStart_toEndOf="@+id/img_userHeadPic" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/text_userCoin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:text="硬币"
-            app:layout_constraintBottom_toBottomOf="@+id/image"
-            app:layout_constraintStart_toEndOf="@+id/textView4" />
+            app:layout_constraintBottom_toBottomOf="@+id/img_userHeadPic"
+            app:layout_constraintStart_toEndOf="@+id/text_userBbi" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
@@ -61,11 +61,11 @@
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/constraintLayout3"
-            app:layout_constraintTop_toBottomOf="@+id/image">
+            app:layout_constraintTop_toBottomOf="@+id/img_userHeadPic">
 
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/text_userDynamic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -99,7 +99,7 @@
 
 
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/text_userFollowWith"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -132,7 +132,7 @@
             app:layout_constraintTop_toTopOf="@+id/constraintLayout3">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/text_userFans"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
@@ -154,7 +154,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/text_userSpace"
             android:layout_width="86dp"
             android:layout_height="72dp"
             android:text="空间  >"
@@ -180,18 +180,18 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout5"
+                android:id="@+id/constraintLayout_History"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@+id/constraintLayout6"
+                app:layout_constraintRight_toLeftOf="@+id/constraintLayout_Collection"
                 app:layout_constraintTop_toTopOf="parent">
 
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/image_History"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
 
@@ -209,70 +209,70 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView1" />
+                    app:layout_constraintTop_toBottomOf="@+id/image_History" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout6"
+                android:id="@+id/constraintLayout_Collection"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintLeft_toRightOf="@+id/constraintLayout5"
-                app:layout_constraintRight_toLeftOf="@+id/constraintLayout7"
-                app:layout_constraintTop_toTopOf="@+id/constraintLayout5">
+                app:layout_constraintLeft_toRightOf="@+id/constraintLayout_History"
+                app:layout_constraintRight_toLeftOf="@+id/constraintLayout_Publish"
+                app:layout_constraintTop_toTopOf="@+id/constraintLayout_History">
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/image_Collection"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
 
-                    app:layout_constraintBottom_toTopOf="@+id/textView8"
+                    app:layout_constraintBottom_toTopOf="@+id/text_Collection"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:src="@drawable/ic_save"/>
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/text_Collection"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="我的收藏"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+                    app:layout_constraintTop_toBottomOf="@+id/image_Collection" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout7"
+                android:id="@+id/constraintLayout_Publish"
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintLeft_toRightOf="@+id/constraintLayout6"
+                app:layout_constraintLeft_toRightOf="@+id/constraintLayout_Collection"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/constraintLayout6">
+                app:layout_constraintTop_toTopOf="@+id/constraintLayout_Collection">
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/image_Publish"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
 
-                    app:layout_constraintBottom_toTopOf="@+id/textView9"
+                    app:layout_constraintBottom_toTopOf="@+id/text_Publish"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                         android:src="@drawable/ic_set" />
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/text_Publish"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="我的发布"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/image_Publish" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -304,16 +304,16 @@
                 app:layout_constraintBottom_toBottomOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/Con8_1"
+                    android:id="@+id/constraintLayout_Service"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    app:layout_constraintBottom_toTopOf="@+id/Con8_2"
+                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout_Class"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_weight="1"
                     >
 
                     <ImageView
-                        android:id="@+id/imageView8_1_1"
+                        android:id="@+id/image_Service"
                         android:layout_width="74dp"
                         android:layout_height="41dp"
                         android:layout_marginStart="4dp"
@@ -330,8 +330,8 @@
                         android:layout_marginStart="12dp"
                         android:text="联系客服"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/imageView8_1_1"
-                        app:layout_constraintTop_toTopOf="@+id/imageView8_1_1" />
+                        app:layout_constraintStart_toEndOf="@+id/image_Service"
+                        app:layout_constraintTop_toTopOf="@+id/image_Service" />
 
                     <TextView
                         android:id="@+id/textView18"
@@ -345,16 +345,16 @@
                         app:layout_constraintVertical_bias="0.515" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/Con8_2"
+                    android:id="@+id/constraintLayout_Class"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    app:layout_constraintTop_toBottomOf="@+id/Con8_1"
-                    app:layout_constraintBottom_toTopOf="@+id/Con8_3"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout_Service"
+                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout_YoungerStar"
                     app:layout_constraintVertical_weight="1"
                     >
 
                     <ImageView
-                        android:id="@+id/imageView8_1_2"
+                        android:id="@+id/image_Class"
                         android:layout_width="74dp"
                         android:layout_height="41dp"
                         android:layout_marginStart="4dp"
@@ -370,9 +370,9 @@
                         android:layout_height="26dp"
                         android:layout_marginStart="12dp"
                         android:text="课堂模式"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageView8_1_2"
-                        app:layout_constraintStart_toEndOf="@+id/imageView8_1_2"
-                        app:layout_constraintTop_toTopOf="@+id/imageView8_1_2" />
+                        app:layout_constraintBottom_toBottomOf="@+id/image_Class"
+                        app:layout_constraintStart_toEndOf="@+id/image_Class"
+                        app:layout_constraintTop_toTopOf="@+id/image_Class" />
 
                     <TextView
                         android:id="@+id/textView19"
@@ -386,11 +386,11 @@
                         app:layout_constraintVertical_bias="0.515" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/Con8_3"
+                    android:id="@+id/constraintLayout_YoungerStar"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    app:layout_constraintTop_toBottomOf="@id/Con8_2"
-                    app:layout_constraintBottom_toTopOf="@id/Con8_4"
+                    app:layout_constraintTop_toBottomOf="@id/constraintLayout_Class"
+                    app:layout_constraintBottom_toTopOf="@id/constraintLayout_Setting"
                     app:layout_constraintVertical_weight="1"
                     >
                     <ImageView
@@ -428,16 +428,16 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/Con8_4"
+                    android:id="@+id/constraintLayout_Setting"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/Con8_3"
+                    app:layout_constraintTop_toBottomOf="@id/constraintLayout_YoungerStar"
                     app:layout_constraintVertical_weight="1"
                     tools:layout_editor_absoluteX="-81dp">
 
                     <ImageView
-                        android:id="@+id/imageView8_1_4"
+                        android:id="@+id/image_Setting"
                         android:layout_width="74dp"
                         android:layout_height="41dp"
                         android:layout_marginStart="4dp"
@@ -454,8 +454,8 @@
                         android:layout_marginStart="12dp"
                         android:text="设置"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/imageView8_1_4"
-                        app:layout_constraintTop_toTopOf="@+id/imageView8_1_4" />
+                        app:layout_constraintStart_toEndOf="@+id/image_Setting"
+                        app:layout_constraintTop_toTopOf="@+id/image_Setting" />
 
                     <TextView
                         android:id="@+id/textView21"
