--- a/app/src/main/res/layout/item_video_info.xml
+++ b/app/src/main/res/layout/item_video_info.xml
@@ -4,103 +4,107 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="220dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="7dp"
-        android:layout_width="193dp"
-        android:layout_height="169dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">>
+    <top.limuyang2.shadowlayoutlib.ShadowConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        app:l_radius="6dp"
+        app:l_shadowAlpha="0.8"
+        app:l_shadowElevation="2dp"
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-        <ImageView
-            android:id="@+id/img_videoPicture"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:src="@drawable/ic_love_black"
-            ></ImageView>
-        <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            app:layout_constraintBottom_toBottomOf="@id/img_videoPicture"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/img2_png"
-            android:src="@drawable/ic_play"
-            android:layout_marginLeft="6dp"
-            ></ImageView>
-        <TextView
-            android:id="@+id/text_numberOfPlayer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/img2_png"
-            app:layout_constraintLeft_toRightOf="@id/img2_png"
-            app:layout_constraintTop_toTopOf="@id/img2_png"
-            android:layout_marginLeft="2dp"
-            android:text="asdasdasd"
-            android:textSize="8sp"
-            >
-        </TextView>
-        <ImageView
-            android:id="@+id/img3"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            app:layout_constraintBottom_toBottomOf="@id/img_videoPicture"
-            app:layout_constraintLeft_toRightOf="@id/text_numberOfPlayer"
-            android:layout_marginLeft="15dp"
-            android:src="@drawable/ic_love_black"
-            ></ImageView>
-        >
-        <TextView
-            android:id="@+id/text2_numberOfLove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/img3"
-            app:layout_constraintLeft_toRightOf="@id/img3"
-            android:text="喜爱数"
-            android:textSize="8dp"
-            app:layout_constraintTop_toTopOf="@id/img3"
-            android:layout_marginLeft="2dp"
-            ></TextView>
-        <TextView
-            android:id="@+id/text_introduceOfVideo"
-            android:layout_marginTop="3dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/img_videoPicture"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="4dp"
-            android:textSize="12sp"
-            android:text="视频介绍"
-            >
-        </TextView>
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/text_videoClass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="视频分类"
-            app:layout_constraintTop_toBottomOf="@+id/text_introduceOfVideo"
-            android:textSize="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            ></TextView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+            <ImageView
+                android:id="@+id/img_videoPicture"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:transitionName="cover"
+                android:src="@drawable/ic_love_black"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <ImageView
+                android:id="@+id/img2_png"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="6dp"
+                android:src="@drawable/ic_play"
+                app:layout_constraintBottom_toBottomOf="@id/img_videoPicture"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <TextView
+                android:id="@+id/text_numberOfPlayer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="asdasdasd"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="@id/img2_png"
+                app:layout_constraintLeft_toRightOf="@id/img2_png"
+                app:layout_constraintTop_toTopOf="@id/img2_png" />
+
+            <ImageView
+                android:id="@+id/img3"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="15dp"
+                android:src="@drawable/ic_love_black"
+                app:layout_constraintBottom_toBottomOf="@id/img_videoPicture"
+                app:layout_constraintLeft_toRightOf="@id/text_numberOfPlayer" />
+
+
+            <TextView
+                android:id="@+id/text2_numberOfLove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:text="喜爱数"
+                android:textSize="12dp"
+                app:layout_constraintBottom_toBottomOf="@+id/img3"
+                app:layout_constraintLeft_toRightOf="@id/img3"
+                app:layout_constraintTop_toTopOf="@id/img3" />
+
+            <TextView
+                android:id="@+id/text_introduceOfVideo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:layout_marginTop="3dp"
+                android:paddingLeft="6dp"
+                android:paddingTop="2dp"
+                android:paddingRight="4dp"
+                android:paddingBottom="2dp"
+                android:textSize="16sp"
+                android:text="视频介绍sajlhfkjahkfjbciuaiuybfuydsgfuiaygubifguaigdfyugauyfyu"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_videoPicture" />
+
+            <TextView
+                android:id="@+id/text_videoClass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="视频分类"
+                android:textSize="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </top.limuyang2.shadowlayoutlib.ShadowConstraintLayout>
 
 
 
